2004-05-25  Daniel Elstner  <daniel.elstner@gmx.net>

	* demos/pixbuf-demo.cc: Minor cleanups: use const double rather
	than a macro for pi, no need to explicitly maintain the timeout
	signal connection, and some other stuff.

2004-05-23  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkmm/comboboxentrytext.cc: Patch from Teemu Tervo to prevent 
	the text column from being added twice, in bug #142956.

2004-05-22  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.in: Check for gthread-2.0 and if it exists, substitute
	the required compiler flags into GTHREAD_CFLAGS.  This is necessary
	to make the library code work correctly in a threaded application.
	For instance, on glibc systems errno is replaced by a macro which
	expands into a function call.  Actually this stuff was already in
	place, but apparently got lost when glibmm was split off.

	* build_shared/Makefile_build.am_fragment (all_includes): Append
	$(GTHREAD_CFLAGS).

2004-05-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* gtk/gtkmm.h: Remove duplicated combobox.h include.  Add missing
	includes of comboboxentry.h and comboboxentrytext.h.

2004-05-18  Daniel Elstner  <daniel.elstner@gmx.net>

	* gtk/src/treeiter.ccg (TreeIter::operator bool): Put the original
	test for gobject_.stamp != 0 back in place.  The iter_is_valid()
	method provided by model implementations is intended for debugging
	purposes only, and thus should not be used here (bug #142599).

	* gtk/src/treemodel.hg (TreeModel::iter_is_valid): Document that
	the usage of this method as abstract interface is deprecated, and
	that the implementation's iter_is_valid() should be used directly.

2004-05-14  Murray Cumming  <murrayc@murrayc.com>

	* gtk/gtkmm/comboboxtext.cc, comboboxentrytext.cc: get_active_text():
	The iterator was being used in ways that probably should not compile.
	This leads to strange results in other situations, so it is best to fix
	it.

2.4.1:

2004-04-25  Murray Cumming  <murrayc@murrayc.com>
